--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/slyles.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/slyles.css" />
+    <title>Портфолио</title>
   </head>
   <body>
     <header>
