--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/slyles.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/slyles.css" />
+    <title>Студия</title>
   </head>
   <body>
     <!--Шапка-->
