--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/slyles.css" />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -19,43 +24,46 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/slyles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="css/slyles.css" />
     <title>Студия</title>
   </head>
-  <body>
+  <body class="container body-container">
     <!--Шапка-->
-    <header>
-      <nav>
-        <a class="logo" href="index.html">
-          <span class="color-logo">Web</span>Studio</a
-        >
-        <ul class="navigation">
-          <li><a class="list current" href="index.html">Студия</a></li>
-          <li><a class="list" href="portfolio.html">Портфолио</a></li>
-          <li><a class="list" href="#">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a class="header-list" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+    <header class="nav">
+      <div class="container nav-container">
+        <nav class="head-nav">
+          <a class="logo" href="index.html">
+            <span class="color-logo">Web</span>Studio</a
           >
-        </li>
-        <li>
-          <a class="header-list" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+          <ul class="navigation">
+            <li class="item">
+              <a class="list current" href="index.html">Студия</a>
+            </li>
+            <li class="item">
+              <a class="list" href="portfolio.html">Портфолио</a>
+            </li>
+            <li class="item"><a class="list" href="#">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts">
+          <li class="item">
+            <a class="header-list" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="header-list" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section class="choice">
+      <section class="choice section">
         <h1 class="header">Эффективные решения для вашего бизнеса</h1>
         <button class="btn" type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="section">
         <h2>Особенности</h2>
         <ul>
           <li>
@@ -88,7 +96,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2 class="about">Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -117,7 +125,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section">
         <h2 class="team">Наша команда</h2>
         <ul>
           <li>
