--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/slyles.css" />
     <title>Студия</title>
   </head>
-  <body class="container body-container">
+  <body>
     <!--Шапка-->
     <header class="nav">
       <div class="container nav-container">
@@ -60,70 +60,79 @@
     </header>
     <main>
       <section class="choice section">
-        <h1 class="header">Эффективные решения для вашего бизнеса</h1>
-        <button class="btn" type="button">Заказать услугу</button>
+        <div class="container header-container">
+          <h1 class="header">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button class="btn" type="button">Заказать услугу</button>
+        </div>
       </section>
       <section class="section">
-        <h2>Особенности</h2>
-        <ul>
-          <li>
-            <h3 class="action">Внимание к деталям</h3>
-            <p class="description">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="action">Пунктуальность</h3>
-            <p class="description">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="action">Планирование</h3>
-            <p class="description">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="action">Современные технологии</h3>
-            <p class="description">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Особенности</h2>
+          <ul class="main-list">
+            <li class="item-list">
+              <h3 class="action">Внимание к деталям</h3>
+              <p class="description">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="action">Пунктуальность</h3>
+              <p class="description">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="action">Планирование</h3>
+              <p class="description">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item-list">
+              <h3 class="action">Современные технологии</h3>
+              <p class="description">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section">
-        <h2 class="about">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="images/box1.jpg"
-              alt="написание кода"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="images/box2.jpg"
-              alt="просмотр страницы с телефона"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="images/box3.jpg"
-              alt="выбор цвета в цветовой гамме"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="about">Чем мы занимаемся</h2>
+          <ul class="img-box">
+            <li class="img">
+              <img
+                src="images/box1.jpg"
+                alt="написание кода"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="img">
+              <img
+                src="images/box2.jpg"
+                alt="просмотр страницы с телефона"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="img">
+              <img
+                src="images/box3.jpg"
+                alt="выбор цвета в цветовой гамме"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section">
         <h2 class="team">Наша команда</h2>
