--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </header>
     <main>
-      <section class="choice section">
+      <section class="section choice-section">
         <div class="container header-container">
           <h1 class="header">
             Эффективные решения <br />
@@ -103,7 +103,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section about-section">
         <div class="container">
           <h2 class="about">Чем мы занимаемся</h2>
           <ul class="img-box">
@@ -134,50 +134,52 @@
           </ul>
         </div>
       </section>
-      <section class="section">
-        <h2 class="team">Наша команда</h2>
-        <ul>
-          <li>
-            <img
-              src="images/img1.jpg"
-              alt="Игорь Демьяненко Product Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="person">Игорь Демьяненко</h3>
-            <p class="speciality">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="images/img2.jpg"
-              alt="Ольга Репина Frontend Developer"
-              width="270"
-              height="260"
-            />
-            <h3 class="person">Ольга Репина</h3>
-            <p class="speciality">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="images/img3.jpg"
-              alt="Николай Тарасов Marketing"
-              width="270"
-              height="260"
-            />
-            <h3 class="person">Николай Тарасов</h3>
-            <p class="speciality">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/img4.jpg"
-              alt="Михаил Ермаков UI Designer"
-              width="270"
-              height="260"
-            />
-            <h3 class="person">Михаил Ермаков</h3>
-            <p class="speciality">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team-section">
+        <div class="container team-container">
+          <h2 class="team">Наша команда</h2>
+          <ul class="title-team">
+            <li class="img-team">
+              <img
+                src="images/img1.jpg"
+                alt="Игорь Демьяненко Product Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="person">Игорь Демьяненко</h3>
+              <p class="speciality">Product Designer</p>
+            </li>
+            <li class="img-team">
+              <img
+                src="images/img2.jpg"
+                alt="Ольга Репина Frontend Developer"
+                width="270"
+                height="260"
+              />
+              <h3 class="person">Ольга Репина</h3>
+              <p class="speciality">Frontend Developer</p>
+            </li>
+            <li class="img-team">
+              <img
+                src="images/img3.jpg"
+                alt="Николай Тарасов Marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="person">Николай Тарасов</h3>
+              <p class="speciality">Marketing</p>
+            </li>
+            <li class="img-team">
+              <img
+                src="images/img4.jpg"
+                alt="Михаил Ермаков UI Designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="person">Михаил Ермаков</h3>
+              <p class="speciality">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="fotter">
