--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
     </header>
     <main>
       <section>
-        <h1>Фильтр</h1>
+        <h1 class="visually-hidden">Фильтр</h1>
         <ul class="filter">
           <li><button class="button" type="button">Все</button></li>
           <li><button class="button" type="button">Веб-сайты</button></li>
@@ -157,29 +157,35 @@
         </ul>
       </section>
     </main>
-    <footer class="fotter">
-      <a class="logo-fotter" href="portfolio.html">
-        <span class="color-logo-fotter">Web</span>Studio</a
-      >
-      <address>
-        <ul class="navigation">
-          <li>
-            <a class="contact-list" href="#">
-              <span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
-            >
-          </li>
-          <li>
-            <a class="contact-list" href="mailto:info@devstudio.com "
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-list" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="logo-thumb">
+          <a class="logo-fotter" href="portfolio.html">
+            <span class="color-logo-fotter">Web</span>Studio</a
+          >
+        </div>
+        <address>
+          <div class="address-footer">
+            <ul>
+              <li>
+                <a class="contact-list" href="#"
+                  ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
+                >
+              </li>
+              <li>
+                <a class="contact-list" href="mailto:info@devstudio.com "
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contact-list" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
