--- a/portfolio.html
+++ b/portfolio.html
@@ -184,17 +184,17 @@
         >
         <address class="address-footer">
           <ul>
-            <li>
+            <li class="address-list">
               <a class="contact-list" href="#"
                 ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
               >
             </li>
-            <li>
+            <li class="address-list">
               <a class="contact-list" href="mailto:info@devstudio.com "
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-list">
               <a class="contact-list" href="tel:+380961111111"
                 >+38 096 111 11 11</a
               >
